# AI-AD

./: .dockerignore  .gitignore  CONTEXT.md  DEMO.bat  DEMO_UPGRADES_PLAN.md  EMPEZAR_AQUI.md  QUICKSTART.md  README.md  ROADMAP.md  SYSTEM_DESIGN.md  VisionMetrics_Dashboard_78 (1).html  ad_screen.html  dashboard.html  project_guidelines.md  pyproject.toml  requirements.txt  run.py
cloud/: .env.example  Caddyfile  Dockerfile  README.md  alembic.ini  docker-compose.yml  requirements.txt
cloud/app/: config.py  db.py  deps.py  main.py  models.py  provisioning.py  schemas.py  security.py
cloud/migrations/: env.py
cloud/scripts/: import_report.py  provision.py  seed_demo.py
cloud/tests/: conftest.py  test_admin.py  test_dashboard.py  test_ingest.py  test_provisioning.py  test_users.py
cloud/web/: .env.example  Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
configs/: demo.yaml  store_config_template.json
data/: .gitignore  README.md  engagement_data.csv  engagement_dataset.csv
data/raw_sessions/: .gitkeep
docs/: HARDWARE_PROTOCOL_VITRINA.md  PRIVACY_POLICY.md  TEAM_ONBOARDING.md  build_docx.py  build_pdf.py  executive_report.docx  executive_report.md
docs/figures/: _assumptions.txt  _build_architecture_figures.py  _build_business_figures.py
figures/: classification_report.txt  metrics.json
fixtures/: README.md
models/: README.md  engagement_metrics.json  engagement_model.pth
remotion-demo/: package-lock.json  package.json
src/: README.md  __init__.py
visionmetrics/: README.md  __init__.py
(+94 files in other folders)
