[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "visionmetrics"
version = "0.1.0"
description = "Privacy-preserving retail engagement analytics — edge agent + cloud backend."
requires-python = ">=3.10"
# Runtime dependencies live in requirements.txt (the install source for edge
# boxes). They are intentionally left unpinned here until the target hardware is
# chosen, at which point we will freeze the versions that actually work on it.

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
include = ["visionmetrics*"]

[tool.pytest.ini_options]
testpaths = ["visionmetrics/tests"]
pythonpath = ["."]
